Migrate test suite from JUnit 5 to JUnit 6
- Update all test classes from JUnit 5 (org.junit.jupiter) to
  JUnit 6 (org.junit.gen6) across all modules
- Migrate test annotations: @BeforeEach, @AfterEach, @Test, @Disabled, etc.
- Migrate assertions to JUnit 6 API
- Add mockito-junit-jupiter dependency to additions module
- Add MockMaker extensions for Mockito compatibility
- Update test resource files (ORCID person XML test data)