@@ -8,9 +8,9 @@
 
 package org.dspace.app.bulkedit;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.io.File;
 import java.io.IOException;
@@ -39,8 +39,8 @@ import org.dspace.discovery.SearchService;
 import org.dspace.discovery.SearchUtils;
 import org.dspace.services.ConfigurationService;
 import org.dspace.services.factory.DSpaceServicesFactory;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
 public class MetadataExportSearchIT extends AbstractIntegrationTestWithDatabase {
 
@@ -57,7 +57,7 @@ public class MetadataExportSearchIT extends AbstractIntegrationTestWithDatabase 
     private SearchService searchService;
 
     @Override
-    @Before
+    @BeforeEach
     public void setUp() throws Exception {
         super.setUp();
 
@@ -80,7 +80,7 @@ public class MetadataExportSearchIT extends AbstractIntegrationTestWithDatabase 
             int dayOfMonth = i + 1;
             issueDate += (dayOfMonth < 10 ? "0" + dayOfMonth : dayOfMonth);
             itemsSubject1[i] = ItemBuilder.createItem(context, collection)
-                .withTitle(String.format("%s item %d", subject1, i))
+                .withTitle("%s item %d".formatted(subject1, i))
                 .withSubject(subject1)
                 .withIssueDate(issueDate)
                 .build();
@@ -92,7 +92,7 @@ public class MetadataExportSearchIT extends AbstractIntegrationTestWithDatabase 
             int dayOfMonth = i + 1;
             issueDate += (dayOfMonth < 10 ? "0" + dayOfMonth : dayOfMonth);
             itemsSubject2[i] = ItemBuilder.createItem(context, collection)
-                .withTitle(String.format("%s item %d", subject2, i))
+                .withTitle("%s item %d".formatted(subject2, i))
                 .withSubject(subject2)
                 .withIssueDate(issueDate)
                 .build();
@@ -191,7 +191,7 @@ public class MetadataExportSearchIT extends AbstractIntegrationTestWithDatabase 
     public void exportMetadataSearchMultipleFilters() throws Exception {
         int result = runDSpaceScript(
             "metadata-export-search", "-f", "subject,equals=" + subject1, "-f",
-            "title,equals=" + String.format("%s item %d", subject1, 0), "-n", filename
+            "title,equals=" + "%s item %d".formatted(subject1, 0), "-n", filename
         );
 
         assertEquals(0, result);
@@ -247,7 +247,7 @@ public class MetadataExportSearchIT extends AbstractIntegrationTestWithDatabase 
         TestDSpaceRunnableHandler testDSpaceRunnableHandler = new TestDSpaceRunnableHandler();
 
         String[] args = new String[] {"metadata-export-search", "-f", "nonExisting,equals=" + subject1, "-f",
-            "title,equals=" + String.format("%s item %d", subject1, 0), "-n", filename};
+            "title,equals=" + "%s item %d".formatted(subject1, 0), "-n", filename};
         int result = ScriptLauncher.handleScript(
             args, ScriptLauncher.getConfig(kernelImpl), testDSpaceRunnableHandler, kernelImpl
         );
@@ -286,7 +286,7 @@ public class MetadataExportSearchIT extends AbstractIntegrationTestWithDatabase 
         try (Reader reader = Files.newReader(file, Charset.defaultCharset());
              CSVReader csvReader = new CSVReader(reader)) {
             List<String[]> lines = csvReader.readAll();
-            assertEquals("Unexpected extra items in export", 2, lines.size());
+            assertEquals(2, lines.size(), "Unexpected extra items in export");
         }
     }
 }
