@@ -15,13 +15,13 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 import org.dspace.builder.RelationshipBuilder;
 import org.dspace.content.MetadataSchemaEnum;
 import org.dspace.content.RelationshipType;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
 public class RightTiltedRelationshipRestRepositoryIT extends RelationshipRestRepositoryIT {
 
     @Override
-    @Before
+    @BeforeEach
     public void setUp() throws Exception {
         super.setUp();
 
@@ -54,7 +54,7 @@ public class RightTiltedRelationshipRestRepositoryIT extends RelationshipRestRep
             .andExpect(status().isOk())
             .andExpect(
                 jsonPath(
-                    String.format("$.metadata['%s.isOrgUnitOfPerson']", MetadataSchemaEnum.RELATION.getName())
+                    "$.metadata['%s.isOrgUnitOfPerson']".formatted(MetadataSchemaEnum.RELATION.getName())
                 ).doesNotExist()
             );
 
@@ -65,7 +65,7 @@ public class RightTiltedRelationshipRestRepositoryIT extends RelationshipRestRep
             )
             .andExpect(status().isOk())
             .andExpect(jsonPath("$.metadata", matchMetadata(
-                String.format("%s.isPersonOfOrgUnit", MetadataSchemaEnum.RELATION.getName()),
+            "%s.isPersonOfOrgUnit".formatted(MetadataSchemaEnum.RELATION.getName()),
                 author1.getID().toString()
             )));
     }
